# mcstas-readout-master

./: .gitignore  BifrostReadout.cpp  BifrostReadout.h  CMakeLists.txt  LICENSE  README.md  Readout.comp  Readout.cpp  Readout.h  ReadoutBIFROST.cpp  ReadoutBIFROST.h  ReadoutClass.cpp  ReadoutClass.h  Readout_BIFROST.comp  Structs.h  conanfile.py  efu_time.h  main.cpp  tester.cpp  version.hpp.in  version.py
.github/workflows/: main.yml
cmake/: ReadoutConfig.cmake.in  VERSION  check.cmake  checkgit.cmake  fetcher.cmake  readout-config.in  readout-hdf5.cmake  readout_config.h.in  version.py
components/: Readout.comp  ReadoutCAEN.comp  ReadoutTTLMonitor.comp
lib/: CMakeLists.txt  Readout.cpp  Readout.h  ReadoutClass.cpp  ReadoutClass.h  Readout_merge.cpp  Structs.h  cluon-complete.hpp  enums.cpp  enums.h  hdf_interface.cpp  hdf_interface.h  reader.h  readout_structs.h  replay.cpp  replay.h  writer.h
share/Readout/: ReadoutCAEN.comp  ReadoutTTLMonitor.comp
src/: CMakeLists.txt
src/config/: CMakeLists.txt  helper.cpp  main.cpp
src/replay/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  readout_test.cpp  replay_test.cpp  test_integration.sh  test_utils.h
